@@ -1,5 +1,9 @@
 2008-05-10  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm: Yay, |canvas| got the final status!
+
+2008-05-10  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm ($GetHTMLBooleanAttrChecker): Allow uppercase
 	letters (HTML5 revision 1572).
 
